--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>Etcd.Configuration</PackageId>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Beck Jin</Authors>
     <Title>Etcd.Configuration</Title>
     <AssemblyTitle>Etcd.Configuration</AssemblyTitle>
@@ -18,6 +18,7 @@
     <SignAssembly>true</SignAssembly>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <Nullable>enable</Nullable>
     <Copyright>Copyright © 2019</Copyright>
   </PropertyGroup>
 
@@ -25,6 +26,10 @@
     <PackageReference Include="dotnet-etcd" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+    <PackageReference Include="Nullable" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
