fix basic auth failed

--- a/samples/Etcd.Configuration.API/appsettings.json
+++ b/samples/Etcd.Configuration.API/appsettings.json
@@ -8,9 +8,7 @@
   },
   "AllowedHosts": "*",
   "etcd": {
-    "hosts": [
-      "http://localhost:2379"
-    ],
+    "connectionString": "http://localhost:2379",
     "prefixKeys": [
       "/namespace1/",
       "/namespace2/"
