--- a/samples/Etcd.Configuration.Console/appsettings.json
+++ b/samples/Etcd.Configuration.Console/appsettings.json
@@ -1,8 +1,6 @@
 {
   "etcd": {
-    "hosts": [
-      "http://localhost:2379"
-    ],
+    "connectionString": "http://localhost:2379",
     "prefixKeys": [
       "/namespace1/",
       "/namespace2/"
