--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>Etcd.Configuration</PackageId>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.2</Version>
+    <Version>1.2.4</Version>
     <Authors>Beck Jin</Authors>
     <Title>Etcd.Configuration</Title>
     <AssemblyTitle>Etcd.Configuration</AssemblyTitle>
@@ -22,7 +22,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dotnet-etcd" Version="3.0.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.9.1" />
+    <PackageReference Include="Grpc.Core" Version="1.22.1" />
+    <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
   </ItemGroup>
 
