--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>Etcd.Configuration</PackageId>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.5</Version>
+    <Version>1.2.6</Version>
     <Authors>Beck Jin</Authors>
     <Title>Etcd.Configuration</Title>
     <AssemblyTitle>Etcd.Configuration</AssemblyTitle>
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/beckjin/Etcd.Configuration</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <SignAssembly>true</SignAssembly>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <Copyright>Copyright © 2019</Copyright>
   </PropertyGroup>
