--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>Etcd.Configuration</PackageId>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.6</Version>
+    <Version>1.2.7</Version>
     <Authors>Beck Jin</Authors>
     <Title>Etcd.Configuration</Title>
     <AssemblyTitle>Etcd.Configuration</AssemblyTitle>
@@ -19,6 +19,9 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <Copyright>Copyright © 2019</Copyright>
+    <Description>
+      1.2.7: Add actionOnChange
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
