--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>Etcd.Configuration</PackageId>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.7</Version>
+    <Version>1.2.8</Version>
     <Authors>Beck Jin</Authors>
     <Title>Etcd.Configuration</Title>
     <AssemblyTitle>Etcd.Configuration</AssemblyTitle>
@@ -20,7 +20,7 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <Copyright>Copyright © 2019</Copyright>
     <Description>
-      1.2.7: Add actionOnChange
+      Get configuration from etcd configuration center.
     </Description>
   </PropertyGroup>
 
