--- a/src/Etcd.Configuration/Etcd.Configuration.csproj
+++ b/src/Etcd.Configuration/Etcd.Configuration.csproj
@@ -25,9 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.9.1" />
-    <PackageReference Include="Grpc.Core" Version="1.22.1" />
-    <PackageReference Include="DnsClient" Version="1.2.0" />
+    <PackageReference Include="dotnet-etcd" Version="4.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
   </ItemGroup>
 
